plugins {
    id 'java'
    id 'jacoco'
    id 'org.springframework.boot' version '3.5.6'
    id 'io.spring.dependency-management' version '1.1.7'
}

java {
    group = 'dev.razafindratelo.arsmedia'
    sourceCompatibility = '21'
    targetCompatibility = '21'
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenLocal()
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-amqp'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-mail'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.flywaydb:flyway-core'
    implementation 'org.flywaydb:flyway-database-postgresql'

    implementation 'io.jsonwebtoken:jjwt-api:0.13.0'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.13.0'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.13.0'

    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    testCompileOnly 'org.projectlombok:lombok'
    testAnnotationProcessor 'org.projectlombok:lombok'

    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.13'

    implementation 'net.bramp.ffmpeg:ffmpeg:0.8.0'

    implementation 'com.resend:resend-java:4.6.0'
    implementation 'org.apache.tika:tika-core:3.2.3'

    implementation 'software.amazon.awssdk:s3:2.21.40'
    implementation 'software.amazon.awssdk:s3-transfer-manager:2.21.40'

    implementation 'com.github.kokorin.jaffree:jaffree:2024.08.29'
    implementation 'io.jsonwebtoken:jjwt-api:0.13.0'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.13.0'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.13.0'
    runtimeOnly 'org.postgresql:postgresql'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.boot:spring-boot-testcontainers'
    testImplementation 'org.springframework.amqp:spring-rabbit-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testImplementation 'org.testcontainers:junit-jupiter'
    testImplementation 'org.testcontainers:postgresql'
    testImplementation 'org.testcontainers:rabbitmq'
    testImplementation 'org.testcontainers:localstack:1.21.3'
    testImplementation 'org.wiremock:wiremock-standalone:3.13.1'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    testImplementation 'com.icegreen:greenmail:2.0.1'
    testImplementation 'com.icegreen:greenmail-junit5:2.0.1'

}


test {
    maxParallelForks = Runtime.runtime.availableProcessors().intdiv(2) ?: 1
    useJUnitPlatform()
    finalizedBy jacocoTestCoverageVerification

    jvmArgs(
            '-XX:+EnableDynamicAgentLoading',
            '-Djdk.instrument.traceUsage=false',
            '-Xshare:off'
    )

    testLogging {
        events "passed", "skipped", "failed"
        exceptionFormat "full"
        showStandardStreams = false
        showExceptions = true
        showCauses = true
        showStackTraces = true
    }
}

jacocoTestCoverageVerification {
    dependsOn test
    afterEvaluate {
        classDirectories.setFrom(files(classDirectories.files.collect {
            fileTree(dir: it, exclude: [
                    "**/gen/**"
            ])
        }))
    }
    violationRules {
        rule {
            limit {
                counter = "LINE"
                minimum = 0.5
            }
        }
    }
    finalizedBy jacocoTestReport
}

jacocoTestReport {
    reports {
        xml.required = true
        html.required = true
    }
    afterEvaluate {
        classDirectories.setFrom(files(classDirectories.files.collect {
            fileTree(dir: it, exclude: [
                    "**/gen/**"
            ])
        }))
    }
    doLast {
        def coverageReportFile = layout.buildDirectory.file("reports/jacoco/test/jacocoTestReport.xml").get().asFile
        if (!coverageReportFile.exists()) {
            println "No JaCoCo coverage report found."
            return
        }

        def xmlText = coverageReportFile.text
        def matcher = xmlText =~ /<counter type="LINE" missed="(\d+)" covered="(\d+)"\/>/
        if (matcher.find()) {
            def missed = matcher.group(1).toInteger()
            def covered = matcher.group(2).toInteger()
            def total = missed + covered
            def rate = (covered / total) * 100
            println "Total Line Coverage Rate: ${rate.round(2)}%"
        }
    }

}